# paas-aiven-broker

./: .gitignore  .pre-commit-config.yaml  .test.env  .travis.yml  Gopkg.toml  Makefile  README.md  example-config.json  go.mod  go.sum  main.go  manifest.yml  tools.go
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr.yml
.run/: Integration Test.run.xml
broker/: api.go  api_test.go  broker.go  broker_suite_test.go  broker_test.go  config.go  config_test.go
broker/testing/: broker_tester.go
ci/: create_integration_envfile.sh  integration.yml
ci/integration/: integration_suite_test.go  integration_test.go
client/elastic/: client.go  client_test.go  elastic_suite_test.go
client/elasticsearch/: client.go  client_test.go  elastic_suite_test.go
client/influxdb/: client.go  client_test.go  influxdb_suite_test.go
client/opensearch/: client.go  client_test.go  opensearch_suite_test.go
examples/: config.json
metricsconverger/: metricsconverger.go  metricsconverger_suite_test.go
provider/: config.go  config_test.go  credentials.go  credentials_test.go  interface.go  models.go  provider.go  provider_internals_test.go  provider_suite_test.go  provider_test.go
provider/aiven/: aiven_suite_test.go  client.go  client_test.go  user_config.go
provider/aiven/fakes/: fake_client.go
provider/fakes/: fake_provider.go  fake_service_provider.go
tools/: pyproject.toml  tag_untagged_services.py  test_tag_untagged_services.py
